# shutdown-now

./: Cargo.toml  README.md
examples/: axum-fancy.rs  axum.rs  demo.rs
src/: lib.rs
