[package]
name = "shutdown-now"
version = "1.0.3"
edition = "2024"
description = "Gracefully handle shutdown and termination signals with zero hassle."
license = "MIT"
repository = "https://github.com/canmi21/shutdown-now"
readme = "README.md"
keywords = ["server", "unix", "signal", "exit"]
# I really don't know which category to put it in (:
categories = ["asynchronous"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "axum-fancy"
path = "examples/axum-fancy.rs"
required-features = ["fancy"]

[dependencies]
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }

[dependencies.fancy-log]
version = "0.1"
optional = true

[dev-dependencies]
axum = "0.8"

[features]
default = []
fancy = ["fancy-log"]